<resources>
    <string name="app_name">Tinkoff Fintech</string>

    <string name="events">Events</string>
    <string name="courses">My courses</string>
    <string name="profile">Profile</string>

    <string name="edit">Edit</string>
    <string name="first_name">First name</string>
    <string name="second_name">Second name</string>
    <string name="patronymic">Patronymic</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="empty_error_message">Should not be empty</string>
    <string name="lowercase_error_message">Should start with capital letter</string>
    <string name="dialog_confirmation_message">If you leave the editing screen, changes will not be saved. Leave?</string>
    <string name="stay">Stay</string>
    <string name="leave">Leave</string>
    
    <string name="academic_performance">Academic performance</string>
    <string name="details">Details</string>
    <string name="rating">Rating</string>
    <string name="points">points</string>
    <string name="total_rating">Total rating %s</string>
    <string name="tests_passed">Tests passed</string>
    <string name="homeworks_completed">Homeworks completed</string>
    <string name="passed_lessons">Passed</string>
    <string name="left_lessons">Left</string>
    <string name="completed_courses">Completed courses</string>
    <string name="passed">Passed</string>
    <string name="checking">Checking</string>
    <string name="noviy">New</string>
    <string name="failed">Failed</string>

    <string name="no_contacts_found">No contacts found\n¯\\_(ツ)_/¯</string>
    <string name="switch_view">Switch view</string>
    <string name="add_account">Add account</string>
    <string name="remove_account">Remove account</string>
    <string name="shuffle_accounts">Shuffle accounts</string>
    <string name="sort_alphabetically">Sort alphabetically</string>
    <string name="sort_by_mark">Sort by mark</string>
    <string name="no_name">No name</string>

    <string name="log_in">Log In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="wrong_email_or_password">Wrong email or password</string>
    <string name="wrong_email">Wrong email</string>
    <string name="empty_password">Empty password</string>

    <string name="network_error">Network error</string>

    <string name="no_lectures">YOU ARE FREE!</string>
    <string name="progress_numbers" translatable="false">%1$s/%2$s</string>
    <string name="deadline">Deadline %s</string>

    <string name="you_with_name">%s (You)</string>

    <string name="open_quote" translatable="false">❝</string>
    <string name="close_quote" translatable="false">❞</string>
    <string name="contact_info_label">Contact information</string>
    <string name="mobile_phone_label">Phone number</string>
    <string name="email_label">Email</string>
    <string name="region_label">Region</string>
    <string name="education_label">Education</string>
    <string name="school_label">School</string>
    <string name="school_graduation_year_label">School graduation year</string>
    <string name="university_label">University</string>
    <string name="faculty_label">Faculty</string>
    <string name="university_graduation_year_label">University graduation year</string>
    <string name="department_label">Department</string>
    <string name="work_label">Work</string>
    <string name="current_work_label">Current Work</string>
    <string name="graduation_year">%s year</string>

    <string name="no_events">No events</string>
    <string name="active">Active</string>
    <string name="archived">Archived</string>

    <string name="no_students">No students</string>
    <string name="you">you</string>
    <string name="lectures">Lectures</string>
    <string name="event">Event</string>

</resources>
