<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipeRefresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.bendezu.tinkofffintech.view.InitialsCircleView
                android:id="@+id/avatarImageView"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/logOutButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="8dp"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:padding="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/avatarImageView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/avatarImageView"
                app:srcCompat="@drawable/ic_log_out" />

            <TextView
                android:id="@+id/firstnameLabel"
                style="@style/ProfileLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:text="@string/first_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/avatarImageView" />

            <TextView
                android:id="@+id/firstNameTextView"
                style="@style/ProfileText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/firstnameLabel"
                tools:text="Steven" />

            <TextView
                android:id="@+id/secondnameLabel"
                style="@style/ProfileLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/second_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/firstNameTextView" />

            <TextView
                android:id="@+id/secondNameTextView"
                style="@style/ProfileText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/secondnameLabel"
                tools:text="Jobs" />

            <TextView
                android:id="@+id/patronymicLabel"
                style="@style/ProfileLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/patronymic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/secondNameTextView" />

            <TextView
                android:id="@+id/patronymicTextView"
                style="@style/ProfileText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/patronymicLabel"
                tools:text="Paul" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>